Added pub section

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <div class="my-5" id="content">
             <div id="bio" class="section level2">
             <h2>Bio</h2>
-            <p>Hi, I am Brad. I am curretly an Assistant Professor in the College of Business at Kutztown University of Pennsylvania. My main area of instruction is in Data Analytics, as well as teaching my very popular Sport Analytics (SPT 313) course.</p>
+            <p>Hi, I am Brad. I am curretly an Assistant Professor in the College of Business at Kutztown University of Pennsylvania. My main area of instruction &amp; research is in Data Analytics, as well as teaching my very popular Sport Analytics (SPT 313) course.</p>
             <p>My research focuses on using big data, the R programming language, and analytics to explore the impact of professional stadiums on neighboring communities. I use the proprietary Zillow ZTRAX database as well as U.S. Census and other forms of data to create robust, applied, and useful insight into how best to protect those livings in areas where stadiums are proposes for construction.</p>
             <p>As well, my work in sport analytics, specifically the NFL, has been featured on numerous media outlets, including the USA Today and Sports Illustrated.</p>
             </div>
@@ -88,6 +88,15 @@
             <h2>Experience</h2>
             <p><strong>Kutztown University</strong> | Assistant Professor | 2018 - Present</p>
             <p><strong>Keystone College</strong> | Assistant Professor | 2014 - 2018</p>
+            </div>
+            <div id="recent-publications" class="section level2">
+            <h2>Recent Publications</h2>
+            <ol style="list-style-type: decimal">
+            <li><p>Congelio, B. (2022). “Examining the Impact of New Stadium Construction on Local Property Prices Using Data Analytics and the Zillow ZTRAX Database.” <em>Journal of Business, Economics, and Technology</em>. Spring 2022, 39-55.</p></li>
+            <li><p>Congelio, B. (2021). “Monitoring the Policing of Olympic Host Cities: A Novel Approach Using Data Analytics and the LA2028 Olympic Summer Games.” <em>Journal of Olympic Studies</em> 2(2), 129-145.</p></li>
+            <li><p>Congelio, B. “Predicting the Impact of a New Stadium on Surrounding Neighborhoods Using a <em>k</em>-means Unsupervised Clustering Algorithm.” Currently under peer review.</p></li>
+            <li><p>Congelio, B. “Examining a Megaevent’s Impact on Foot Traffic to Local Businesses Using Mobility and Demographic Aggregation Data.” Curently under peer review. Funding by a <em>SafeGraph</em> $15,000 research grant.</p></li>
+            </ol>
             </div>
           </div>
         </div>
@@ -135,7 +144,7 @@
             <div class="p pt-4 px-5">
               <div id="bio" class="section level2">
               <h2>Bio</h2>
-              <p>Hi, I am Brad. I am curretly an Assistant Professor in the College of Business at Kutztown University of Pennsylvania. My main area of instruction is in Data Analytics, as well as teaching my very popular Sport Analytics (SPT 313) course.</p>
+              <p>Hi, I am Brad. I am curretly an Assistant Professor in the College of Business at Kutztown University of Pennsylvania. My main area of instruction &amp; research is in Data Analytics, as well as teaching my very popular Sport Analytics (SPT 313) course.</p>
               <p>My research focuses on using big data, the R programming language, and analytics to explore the impact of professional stadiums on neighboring communities. I use the proprietary Zillow ZTRAX database as well as U.S. Census and other forms of data to create robust, applied, and useful insight into how best to protect those livings in areas where stadiums are proposes for construction.</p>
               <p>As well, my work in sport analytics, specifically the NFL, has been featured on numerous media outlets, including the USA Today and Sports Illustrated.</p>
               </div>
@@ -150,6 +159,15 @@
               <h2>Experience</h2>
               <p><strong>Kutztown University</strong> | Assistant Professor | 2018 - Present</p>
               <p><strong>Keystone College</strong> | Assistant Professor | 2014 - 2018</p>
+              </div>
+              <div id="recent-publications" class="section level2">
+              <h2>Recent Publications</h2>
+              <ol style="list-style-type: decimal">
+              <li><p>Congelio, B. (2022). “Examining the Impact of New Stadium Construction on Local Property Prices Using Data Analytics and the Zillow ZTRAX Database.” <em>Journal of Business, Economics, and Technology</em>. Spring 2022, 39-55.</p></li>
+              <li><p>Congelio, B. (2021). “Monitoring the Policing of Olympic Host Cities: A Novel Approach Using Data Analytics and the LA2028 Olympic Summer Games.” <em>Journal of Olympic Studies</em> 2(2), 129-145.</p></li>
+              <li><p>Congelio, B. “Predicting the Impact of a New Stadium on Surrounding Neighborhoods Using a <em>k</em>-means Unsupervised Clustering Algorithm.” Currently under peer review.</p></li>
+              <li><p>Congelio, B. “Examining a Megaevent’s Impact on Foot Traffic to Local Businesses Using Mobility and Demographic Aggregation Data.” Curently under peer review. Funding by a <em>SafeGraph</em> $15,000 research grant.</p></li>
+              </ol>
               </div>
             </div>
         </div>
