--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@ document.addEventListener('DOMContentLoaded', function(e) {
             the College of Business at Kutztown University of
             Pennsylvania. My main area of instruction &amp; research is
             in Data Analytics, as well as teaching my very popular Sport
-            Analytics (SPT 313) course.</p>
+            Analytics (SPT 313) course. I am also the author of <a href="https://www.routledge.com/Introduction-to-NFL-Analytics-with-R/Congelio/p/book/9781032427751">Introduction
+            to NFL Analytics with R</a>, which is published by
+            Routledge.</p>
             <p>My research focuses on using big data, the R programming
             language, and analytics to explore the impact of
             professional stadiums on neighboring communities. I use the
@@ -226,7 +228,10 @@ document.addEventListener('DOMContentLoaded', function(e) {
               the College of Business at Kutztown University of
               Pennsylvania. My main area of instruction &amp; research
               is in Data Analytics, as well as teaching my very popular
-              Sport Analytics (SPT 313) course.</p>
+              Sport Analytics (SPT 313) course. I am also the author of
+              <a href="https://www.routledge.com/Introduction-to-NFL-Analytics-with-R/Congelio/p/book/9781032427751">Introduction
+              to NFL Analytics with R</a>, which is published by
+              Routledge.</p>
               <p>My research focuses on using big data, the R
               programming language, and analytics to explore the impact
               of professional stadiums on neighboring communities. I use
