small updates/typos

--- a/index.html
+++ b/index.html
@@ -98,15 +98,15 @@ document.addEventListener('DOMContentLoaded', function(e) {
             Pennsylvania. My main area of instruction &amp; research is
             in Data Analytics, as well as teaching my very popular Sport
             Analytics (SPT 313) course. I am also the author of <a href="https://www.routledge.com/Introduction-to-NFL-Analytics-with-R/Congelio/p/book/9781032427751">Introduction
-            to NFL Analytics with R</a>, which is published by
-            Routledge.</p>
+            to NFL Analytics with R</a>, which is under contract with
+            CRC Press and slated for publication in December 2023.</p>
             <p>My research focuses on using big data, the R programming
             language, and analytics to explore the impact of
             professional stadiums on neighboring communities. I use the
-            proprietary Zillow ZTRAX database as well as U.S. Census and
-            other forms of data to create robust, applied, and useful
-            insight into how best to protect those livings in areas
-            where stadiums are proposes for construction.</p>
+            proprietary Zillow ZTRAX database as well as the U.S. Census
+            and other forms of data to create robust, applied, and
+            useful insight into how best to protect those livings in
+            areas where stadiums are proposed for construction.</p>
             <p>As well, my work in sport analytics, specifically the
             NFL, has been featured on numerous media outlets, including
             the USA Today and Sports Illustrated.</p>
@@ -115,7 +115,7 @@ document.addEventListener('DOMContentLoaded', function(e) {
             <h2>Examples of Projects</h2>
             <ol style="list-style-type: decimal">
             <li><a href="https://www.routledge.com/Introduction-to-NFL-Analytics-with-R/Congelio/p/book/9781032427751">Introduction
-            to NFL Analytics with R</a> (book, Routledge): It has become
+            to NFL Analytics with R</a> (book, CRC Press): It has become
             difficult to ignore the analytics movement within the NFL.
             An increasing number of coaches openly integrate advanced
             numbers into their game plan, and commentators, throughout
@@ -130,13 +130,13 @@ document.addEventListener('DOMContentLoaded', function(e) {
             step-by step instructions in a structured, jargon-free
             manner.</li>
             <li><a href="https://bcongelio.shinyapps.io/ticket_churn/">Customer
-            Churn Prediction</a>: Using ticket purchase data from the LA
-            Kings (provided via the National Sports Analytics
-            Intercollegiate Championship), I decided an
+            Churn Prediction</a> (ShinyApp): Using ticket purchase data
+            from the LA Kings (provided via the National Sports
+            Analytics Intercollegiate Championship), an
             <strong>XGBoost</strong> classification machine learning
-            model that can predict (with roughly 90% accuracy) whether a
-            ticket-buying customer is likely to return to a second game
-            or not. Click the link above to view the model in its
+            model is used to predict (with roughly 90% accuracy) whether
+            a ticket-buying customer is likely to return to a second
+            game or not. Click the link above to view the model in its
             current ShinyApp format.</li>
             </ol>
             </div>
@@ -174,7 +174,7 @@ document.addEventListener('DOMContentLoaded', function(e) {
             review.</p></li>
             <li><p>Congelio, B. “Examining a Megaevent’s Impact on Foot
             Traffic to Local Businesses Using Mobility and Demographic
-            Aggregation Data.” Curently under peer review. Funding by a
+            Aggregation Data.” Currently under peer review. Funded by a
             <em>SafeGraph</em> $15,000 research grant.</p></li>
             </ol>
             </div>
@@ -230,15 +230,15 @@ document.addEventListener('DOMContentLoaded', function(e) {
               is in Data Analytics, as well as teaching my very popular
               Sport Analytics (SPT 313) course. I am also the author of
               <a href="https://www.routledge.com/Introduction-to-NFL-Analytics-with-R/Congelio/p/book/9781032427751">Introduction
-              to NFL Analytics with R</a>, which is published by
-              Routledge.</p>
+              to NFL Analytics with R</a>, which is under contract with
+              CRC Press and slated for publication in December 2023.</p>
               <p>My research focuses on using big data, the R
               programming language, and analytics to explore the impact
               of professional stadiums on neighboring communities. I use
-              the proprietary Zillow ZTRAX database as well as U.S.
+              the proprietary Zillow ZTRAX database as well as the U.S.
               Census and other forms of data to create robust, applied,
               and useful insight into how best to protect those livings
-              in areas where stadiums are proposes for construction.</p>
+              in areas where stadiums are proposed for construction.</p>
               <p>As well, my work in sport analytics, specifically the
               NFL, has been featured on numerous media outlets,
               including the USA Today and Sports Illustrated.</p>
@@ -247,7 +247,7 @@ document.addEventListener('DOMContentLoaded', function(e) {
               <h2>Examples of Projects</h2>
               <ol style="list-style-type: decimal">
               <li><a href="https://www.routledge.com/Introduction-to-NFL-Analytics-with-R/Congelio/p/book/9781032427751">Introduction
-              to NFL Analytics with R</a> (book, Routledge): It has
+              to NFL Analytics with R</a> (book, CRC Press): It has
               become difficult to ignore the analytics movement within
               the NFL. An increasing number of coaches openly integrate
               advanced numbers into their game plan, and commentators,
@@ -262,14 +262,14 @@ document.addEventListener('DOMContentLoaded', function(e) {
               to provide step-by step instructions in a structured,
               jargon-free manner.</li>
               <li><a href="https://bcongelio.shinyapps.io/ticket_churn/">Customer
-              Churn Prediction</a>: Using ticket purchase data from the
-              LA Kings (provided via the National Sports Analytics
-              Intercollegiate Championship), I decided an
+              Churn Prediction</a> (ShinyApp): Using ticket purchase
+              data from the LA Kings (provided via the National Sports
+              Analytics Intercollegiate Championship), an
               <strong>XGBoost</strong> classification machine learning
-              model that can predict (with roughly 90% accuracy) whether
-              a ticket-buying customer is likely to return to a second
-              game or not. Click the link above to view the model in its
-              current ShinyApp format.</li>
+              model is used to predict (with roughly 90% accuracy)
+              whether a ticket-buying customer is likely to return to a
+              second game or not. Click the link above to view the model
+              in its current ShinyApp format.</li>
               </ol>
               </div>
               <div id="education" class="section level2">
@@ -307,8 +307,8 @@ document.addEventListener('DOMContentLoaded', function(e) {
               Currently under peer review.</p></li>
               <li><p>Congelio, B. “Examining a Megaevent’s Impact on
               Foot Traffic to Local Businesses Using Mobility and
-              Demographic Aggregation Data.” Curently under peer review.
-              Funding by a <em>SafeGraph</em> $15,000 research
+              Demographic Aggregation Data.” Currently under peer
+              review. Funded by a <em>SafeGraph</em> $15,000 research
               grant.</p></li>
               </ol>
               </div>
